--- a/challenge-locadora/tsconfig.json
+++ b/challenge-locadora/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "files": [],
+  "compilerOptions": {
+    "noImplicitAny": false
+  },
+
+  "allowJs": true,
   "references": [
     {
       "path": "./tsconfig.node.json"
