--- a/challenge-locadora/package.json
+++ b/challenge-locadora/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@vueuse/core": "^10.7.2",
     "bootstrap": "^5.3.2",
     "flowbite": "^2.2.1",
     "pinia": "^2.1.6",
