--- a/challenge-locadora/package.json
+++ b/challenge-locadora/package.json
@@ -18,8 +18,10 @@
     "bootstrap": "^5.3.2",
     "flowbite": "^2.2.1",
     "pinia": "^2.1.6",
+    "sweetalert2": "^11.10.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
