--- a/challenge-locadora/package.json
+++ b/challenge-locadora/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@vueuse/core": "^10.7.2",
+    "ag-grid-vue3": "^31.0.2",
     "bootstrap": "^5.3.2",
     "flowbite": "^2.2.1",
     "pinia": "^2.1.6",
