--- a/challenge-locadora/package.json
+++ b/challenge-locadora/package.json
@@ -26,7 +26,9 @@
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@testing-library/vue": "^8.0.1",
     "@tsconfig/node18": "^18.2.0",
+    "@types/jest": "^29.5.11",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.17.5",
     "@vitejs/plugin-vue": "^4.3.1",
@@ -39,7 +41,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "~5.1.6",
     "vite": "^4.4.9",
-    "vitest": "^0.34.2",
+    "vitest": "^0.34.6",
     "vue-tsc": "^1.8.8"
   }
 }
