--- a/challenge-locadora/package.json
+++ b/challenge-locadora/package.json
@@ -21,6 +21,8 @@
     "pinia": "^2.1.6",
     "sweetalert2": "^11.10.3",
     "vue": "^3.3.4",
+    "vue-loader": "^17.4.2",
+    "vue-loading-overlay": "6.0",
     "vue-router": "^4.2.4",
     "vue-sweetalert2": "^5.0.5"
   },
